[package]
name = "oauth_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
tokio-postgres = "0.7"
dotenv = "0.15"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"  # Add this line for the env_logger dependency
tracing = "0.1"
tracing-actix-web = "0.6"
prometheus = "0.11"
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
oauth2 = "4.4.2"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.133"